--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
         <!-- Header Section -->
         <header class="text-center mb-8 pb-4 border-b-2 border-gray-300">
+            <!-- Profile Image -->
+            <img src="https://placehold.co/128x128/e2e8f0/64748b?text=Profile" alt="Profile Picture" class="w-32 h-32 rounded-full mx-auto mb-4" onerror="this.onerror=null; this.src='https://placehold.co/128x128/e2e8f0/64748b?text=Profile';">
+
             <h1 class="text-3xl sm:text-4xl font-bold text-gray-900 mb-1">Rameshkumar Balakrishnan</h1>
             <p class="text-lg text-gray-600">Tamilnadu, India</p>
             <div class="flex flex-col sm:flex-row justify-center sm:space-x-8 mt-2 text-gray-700">
@@ -43,7 +46,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-gray-500" viewBox="0 0 20 20" fill="currentColor">
                         <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
                     </svg>
-                    <span>+91-741-8124091</span>
+                    <span>+917418124091</span>
                 </span>
             </div>
         </header>
