--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- Header Section -->
         <header class="text-center mb-8 pb-4 border-b-2 border-gray-300">
             <!-- Profile Image -->
-            <img src="https://placehold.co/128x128/e2e8f0/64748b?text=Profile" alt="Profile Picture" class="w-32 h-32 rounded-full mx-auto mb-4" onerror="this.onerror=null; this.src='https://placehold.co/128x128/e2e8f0/64748b?text=Profile';">
+            <img src="./42F938BC-F8CB-4B5D-9CA8-5AED8F1F7411.jpg" alt="Profile Picture" class="w-32 h-32 rounded-full mx-auto mb-4" onerror="this.onerror=null; this.src='https://placehold.co/128x128/e2e8f0/64748b?text=Profile';">
 
             <h1 class="text-3xl sm:text-4xl font-bold text-gray-900 mb-1">Rameshkumar Balakrishnan</h1>
             <p class="text-lg text-gray-600">Tamilnadu, India</p>
